fixed text overflowing

--- a/style.css
+++ b/style.css
@@ -181,8 +181,8 @@
     .textcontent{
      display: flex;
      flex-direction: column;
-     flex-wrap: wrap;
      background-color:azure ;
+     justify-content: space-between;
     }
   
    h2{
@@ -190,11 +190,12 @@
    }
   
    .inner-text{
-    margin: 80px 0 60px 40px;
-    width: 610px;
+    margin: 80px 0 0 40px;
+    width: 40vw;
     font-family: 'momstypewriterregular';
     font-size: larger;
     color: #596D48;
+    
    }
   
    .text{
